src/test/deca/context/invalid/sans_objet/var_already_defined.deca
// Description:
//     Declaration d'une variable deja definie.
//
// Resultats:
//    Ligne 12: Variable already defined
//
// Historique:
//    cree le 01/01/2023

{
   int x;
   float x;
}
